# fast-geodist

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: CI.yml  ci.yml  cicd.yml  release.yml
benches/: array.rs  bench.py
fast_haversine/: __init__.py  slow.py
python/fast_geodist/: __init__.py
python/fast_haversine/: __init__.py
src/: lib.rs
tests/: bench.py  haversine.rs  test_benchmarks.py  test_haversine.py
