[package]
name = "fast-haversine"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_haversine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
itertools = "0.10.3"
ndarray = { version = "0.15.3", features = ["rayon"] }
numpy = "0.17.1"

[dev-dependencies]
approx = "0.5.1"
