[package]
name = "fast-geodist"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_fast_geodist"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module", "abi3-py37"] }
ndarray = { version = "0.15.3", features = ["rayon"] }
numpy = "0.17.1"

[dev-dependencies]
approx = "0.5.1"

[package.metadata.maturin]
python-source = "python"
name = "fast_geodist._fast_geodist"
